sort.basic.shell.AlgShellSort.scala.error
Erreur de compilation :
AlgShellSort:4: error: not found: value ecart
    ecart=getNombreValeurs()/2
    ^AlgShellSort:8: error: not found: value ecart
      while(j-ecart>=0 && !plusPetitQue(j-ecart,tampon)){
              ^AlgShellSort:8: error: not found: value ecart
      while(j-ecart>=0 && !plusPetitQue(j-ecart,tampon)){
                                          ^AlgShellSort:10: error: not found: value ecart
        j=j-ecart
            ^AlgShellSort:17: error: not found: value ecart
  }while(ecart>1)
         ^